# AssemblerProject

./: AddressingMethods.c  AddressingMethods.h  CMakeLists.txt  CommendAndInstructions.c  CommendAndInstructions.h  FileMethod.c  FileMethod.h  HandelLable.c  HandelLable.h  Makefile  McrList.c  McrList.h  OpenMcr.c  OpenMcr.h  OperationLine.c  OperationLine.h  TagList.c  TagList.h  ValidFile.c  ValidFile.h  assembler.c  convertAddress.c  convertAddress.h  convertInstructions.c  convertInstructions.h  definitionOfRegAndOperation.c  definitionOfRegAndOperation.h  encodeAndWriteToFile.c  encodeAndWriteToFile.h  main.c  writeInBaseFour.c  writeInBaseFour.h
